--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
 .logo img{
     width: 180px;
     height: 100px;
+    padding-top: 4px;
 }
 .menu{
     display: flex;
@@ -40,4 +41,8 @@
 .menu ul li a:link, a:visited, a:active{
     text-decoration: none;
     color: rgb(32, 32, 32);
+}
+.menu ul li a:hover{
+    
+    color: rgb(50, 50, 50);
 }
