--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 .header{
-    background-color: bisque;
+    background-color: teal;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -15,6 +15,7 @@
     width: 180px;
     height: 100px;
     padding-top: 4px;
+    cursor: pointer;
 }
 .menu{
     display: flex;
