--- a/css/pag-productos.css
+++ b/css/pag-productos.css
@@ -27,11 +27,17 @@ h2{
     background-color: rgba(0, 0, 0, 0.1);
     cursor: pointer;
 }
+.product:hover{
+    box-shadow: 0px 0px 15px black;
+}
 .product-image{
     width: 100%;
-    max-height: 400px;
+    max-height: 320px;
     border-radius: 10px;
     overflow: hidden;
+}
+.product-image img{
+    width: 100%;
 }
 .product-title{
     font-family: 'Poppins', sans-serif;
@@ -44,4 +50,22 @@ h2{
     font-family: 'Poppins', sans-serif;
     margin-top: 10px;
     text-align: center;
+}
+
+@media screen and (max-width: 1200px){
+    #products{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media screen and (max-width: 900px){
+    #products{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 600px){
+    #products{
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
